# policyts

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  vcpkg-configuration.json  vcpkg.json
cmake/toolchains/: linux-toolchain.cmake
cmake/triplets/: x64-linux-static.cmake
models/: heuristic_convnet.json  policy_convnet.json  twoheaded_convnet.json
problems/: bd_test.txt  cw_test.txt  tsp_test.txt
src/: CMakeLists.txt  readme.md
src/bfs/: CMakeLists.txt  bfs_test.cpp  bfs_train.cpp
src/lts/: CMakeLists.txt  lts_test.cpp  lts_train.cpp
src/phs/: CMakeLists.txt  phs_test.cpp  phs_train.cpp
